# evo-swarm-lora

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
data/: sft_persona_a.jsonl  sft_persona_b.jsonl  sft_persona_c.jsonl
docs/: Reference-chatgpt.md  experiment_log_2025-10-23.md
prompts/codex/: 00_project_bootstrap.md  01_train_three_loras.md  02_multilora_vllm.md  03_evolutionary_loop.md  04_langgraph_integration.md
scripts/: eval_with_harness.sh  evolve_loras.py  export_merge_utils.py  ping_vllm_persona.py  run_debate_local.py  train_all_personas_vertex.py  train_lora_persona.py
src/agents/: debate.py  personalities.py
src/coop/: fitness.py  voting.py
src/models/: lora_ops.py  qwen_loader.py
src/utils/: io.py  prompts.py
